[project]
name = "emeters-central"
version = "0.1.0"
description = ""
authors = ["h-takeyeah <61489178+h-takeyeah@users.noreply.github.com>"]
repository = "https://github.com/h-takeyeah/emeters-central"
requires-python = "~=3.9"
license = "MIT"

[tool.pyright]
exclude = ["**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = false
typecheCkingMode = "strict"

